--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "simple-workflow",
   "version": "1.0.0",
-  "description": "Automated plan executor using Codex SDK with worker/reviewer loop",
+  "description": "Automated plan executor using OpenCode SDK with worker/reviewer loop",
   "type": "module",
   "scripts": {
     "start": "npx tsx run-plan.ts",
     "run-plan": "npx tsx run-plan.ts"
   },
   "dependencies": {
-    "@openai/codex-sdk": "^0.1.0"
+    "@opencode-ai/sdk": "^1.1.0",
+    "effect": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
